# practice_streamlit

./: Dockerfile  README.md  compose.yaml  tmp.csv
src/: app.py  pyproject.toml
