[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pygwalker>=0.4.9.15",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sklearn-preprocessing>=0.1.0",
    "streamlit>=1.47.0",
]
